--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
 
       <div class="container-fluid">
           <%= render "common/navbar" %>
-          <%= yield%>
+          <%= render "common/flashes" %>
+          <%= yield %>
       </div>
 
       <%= render "common/footer" %>
